--- a/index.html
+++ b/index.html
@@ -93,9 +93,12 @@
             eye_raised_lower_eyelid_right: 0, eye_surprised_left: 0, eye_surprised_right: 0, iris_small_left: 0, iris_small_right: 0, mouth_aaa: 0, mouth_iii: 0, mouth_uuu: 0, mouth_eee: 0, mouth_ooo: 0
             , mouth_delta: 0, mouth_smirk: 0, mouth_raised_corner_left: 0, mouth_raised_corner_right: 0, mouth_lowered_corner_left: 0, mouth_lowered_corner_right: 0, iris_rotation_x: 0, iris_rotation_y: 0, head_x: 0, head_y: 0, head_z: 0
         };
+        let modelsStandardList = [];
         let loadstatus;
         let data_json, data_json_length;
         let modelfile_num = 0;
+        let modelFile;
+        let loader;
 
         Ammo().then(function (AmmoLib) {
 
@@ -105,6 +108,7 @@
             animate();
 
         });
+
         function init() {
 
             const container = document.createElement('div');
@@ -135,35 +139,7 @@
             effect = new OutlineEffect(renderer);
 
             // model
-
-            function onProgress(xhr) {
-
-                if (xhr.lengthComputable) {
-
-                    const percentComplete = xhr.loaded / xhr.total * 100;
-                    console.log(Math.round(percentComplete, 2) + '% downloaded');
-
-                }
-
-            }
-
-            const modelFile = data_json.modellist[modelfile_num].location;
-
-            const loader = new MMDLoader();
-
-            loader.load(modelFile, function (object) {
-
-                mesh = object;
-                mesh.position.y = - 10;
-
-                scene.add(mesh);
-
-                findeye_index();
-                initGui();
-                loadstatus = 1;
-            }, onProgress, null);
-
-            //
+            loadModel();
 
             window.addEventListener('resize', onWindowResize);
             const cameracontrols = new OrbitControls(camera, renderer.domElement);
@@ -196,9 +172,7 @@
 
             function initControls() {
                 for (const key in standardlist) {
-
                     controls[key] = 0.0;
-
                 }
             }
 
@@ -209,25 +183,31 @@
             }
 
             function initMorphs() {
-                //此程式只有eye_happy_wink_left能控制
-                let i = 0;
+                //控制
+                let lastKey = -99;
                 for (const key in standardlist) {
-                    if (i != 14) {
-                        morphs.add(controls, key, 0.0, 0.0, 0.01).onChange(onChangeMorph);
-                    }
-                    else {
+                    let newKey = modelsStandardList[modelfile_num][key];
+                    
+                    if ((newKey != -1 && newKey != lastKey)) {
                         morphs.add(controls, key, 0.0, 1.0, 0.01).onChange(onChangeMorph);
+                        lastKey = newKey;
+                    }else if(newKey == undefined){
+                        morphs.add(controls, key, 0.0, 1.0, 0.01).onChange(onChangeMorph);                      
+                    }else{
+                        morphs.add(controls, key, 0.0, 0.0, 0.01).onChange(onChangeMorph);                       
                     }
-                    i++;
                 }
-
             }
 
             function onChangeMorph() {
-                //此程式只有eye_happy_wink_left能控制
-                const key = keys[14];
-                const value = controls[key];
-                mesh.morphTargetInfluences[0] = value;
+                let key;
+                let value;
+                for (let i = 0; i < keys.length; i++) {
+					key = keys[i];
+					value = controls[key]; 
+
+                    mesh.morphTargetInfluences[i] = value;
+				}
             }
 
             initControls();
@@ -237,12 +217,35 @@
             onChangeMorph();
 
             morphs.open();
-
         }
+
+        function loadModel() {
+            function onProgress(xhr) {
+                if (xhr.lengthComputable) {
+                    const percentComplete = xhr.loaded / xhr.total * 100;
+                    console.log(Math.round(percentComplete, 2) + '% downloaded');
+                }
+            }
+            modelFile = data_json.modellist[modelfile_num].location;
+            
+            loader = new MMDLoader();
+
+            loader.load(modelFile, function (object) {
+                mesh = object;
+                mesh.position.y = - 10;
+
+                scene.add(mesh);
+
+                // findeye_index();
+                initGui();
+                loadstatus = 1;
+            }, onProgress, null);
+        }
+
         function findeye_index() {
             for (let i = 0; i < mesh.skeleton.bones.length; i++) {
                 if (mesh.skeleton.bones[i].name == '左目') {
-                    leye_index = i;
+                    leye_index = i;            
                 }
                 else if (mesh.skeleton.bones[i].name == '右目') {
                     reye_index = i;
@@ -254,10 +257,8 @@
         }
         //
         function animate() {
-
             requestAnimationFrame(animate);
             render();
-
         }
 
         function render() {
@@ -269,21 +270,23 @@
         //GetModelData(); 
         function getjson(){
 			var xmlhttp = new XMLHttpRequest();
-            var url = 'model_data.json';
+            var url = 'model_data2.json';
 
             xmlhttp.onreadystatechange = function() {
                 if(this.readyState == 4 && this.status == 200) {
                     data_json = JSON.parse(this.responseText);
                     data_json_length = Object.keys(data_json.modellist).length -1;
-                    console.log(data_json);
+                    // console.log(data_json);
                     init();
-                    //changestdmorth();
+
+                    for(let i = 0; i <= data_json_length; i ++) {
+                        modelsStandardList.push(data_json['modellist'][i]);
+                    }
                 }
             };
             xmlhttp.open("GET", url, true);
             xmlhttp.send();
 		}
-
 
         //--------------------------------------------------------------------------------------------
         //Events
@@ -306,27 +309,7 @@
             gui.destroy();
 
             // model
-            function onProgress(xhr) {
-                if (xhr.lengthComputable) {
-                    const percentComplete = xhr.loaded / xhr.total * 100;
-                    console.log(Math.round(percentComplete, 2) + '% downloaded');
-                }
-            }
-            const modelFile = data_json.modellist[modelfile_num].location;
-
-            const loader = new MMDLoader();
-
-            loader.load(modelFile, function (object) {
-
-            mesh = object;
-            mesh.position.y = - 10;
-
-            scene.add(mesh);
-
-            findeye_index();
-            initGui();
-            loadstatus = 1;
-            }, onProgress, null);
+            loadModel();
         }
 
     </script>
